# opal_notifier

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
myenv/: pyvenv.cfg
