[tool.poetry]
name = "opal-notifier"
version = "0.1.0"
description = ""
authors = ["Krystsina <krystsina.kurytsyna@daftmobile.com>"]
readme = "README.md"
packages = [{include = "opal_notifier"}]

[tool.poetry.dependencies]
python = "^3.9.0"
selenium = "^4.9.1"
python-telegram-bot = "^20.3"
boto3 = "^1.26.138"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
